Fix scrollbars

--- a/client/styles/styles.less
+++ b/client/styles/styles.less
@@ -4,7 +4,6 @@
 
 .outer {
   background: @header;
-  padding:0 0px 20px 0px;
 }
  
 button {
